crates/cyrs-sema/src/snapshots/cyrs_sema__dialect__tests__integer_division_gql_denied.snap
---
source: crates/cyrs-sema/src/dialect.rs
expression: "run_check(&GATE_INTEGER_DIVISION, DialectMode::GqlAligned)"
---
denied: E4012: construct `integer_division` is not allowed in dialect `GqlAligned`; allowed in: OpenCypherV9
