crates/cyrs-sema/src/snapshots/cyrs_sema__dialect__tests__integer_division_oc_ok.snap
---
source: crates/cyrs-sema/src/dialect.rs
expression: "run_check(&GATE_INTEGER_DIVISION, DialectMode::OpenCypherV9)"
---
allowed
