crates/cyrs-sema/src/snapshots/cyrs_sema__dialect__tests__label_negation_gql_ok.snap
---
source: crates/cyrs-sema/src/dialect.rs
expression: "run_check(&GATE_LABEL_NEGATION, DialectMode::GqlAligned)"
---
allowed
