crates/cyrs-sema/src/snapshots/cyrs_sema__dialect__tests__pass_call_apoc_oc_denied.snap
---
source: crates/cyrs-sema/src/dialect.rs
expression: "run_gate(&call_stmt(\"apoc.util.sleep\"), DialectMode::OpenCypherV9)"
---
diagnostics: 1
  E4016: construct `apoc_functions` is not allowed in dialect `OpenCypherV9`; allowed in: no v1 dialect (deferred construct, see spec §9.3)
