crates/cyrs-sema/src/snapshots/cyrs_sema__dialect__tests__pass_call_plain_gql_clean.snap
---
source: crates/cyrs-sema/src/dialect.rs
expression: "run_gate(&call_stmt(\"db.labels\"), DialectMode::GqlAligned)"
---
diagnostics: 0
