crates/cyrs-sema/src/snapshots/cyrs_sema__dialect__tests__pass_match_return_gql_clean.snap
---
source: crates/cyrs-sema/src/dialect.rs
expression: "run_gate(&match_return_stmt(), DialectMode::GqlAligned)"
---
diagnostics: 0
